WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118499
Region based columns not clipped properly
https://bugs.webkit.org/show_bug.cgi?id=118499
Summary
Region based columns not clipped properly
Morten Stenshorne
Reported
2013-07-09 04:18:18 PDT
Clipping in the middle of column gaps doesn't work in the region based multicol implementation.
Attachments
Patch
(12.26 KB, patch)
2013-07-09 05:31 PDT
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion
(575.24 KB, application/zip)
2013-07-09 06:39 PDT
,
Build Bot
no flags
Details
Patch
(12.48 KB, patch)
2013-07-09 07:01 PDT
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion
(679.60 KB, application/zip)
2013-07-09 12:50 PDT
,
Build Bot
no flags
Details
Patch
(12.47 KB, patch)
2013-07-09 13:50 PDT
,
Morten Stenshorne
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(599.26 KB, application/zip)
2013-07-10 04:20 PDT
,
Build Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Morten Stenshorne
Comment 1
2013-07-09 05:31:59 PDT
Created
attachment 206310
[details]
Patch
Build Bot
Comment 2
2013-07-09 06:39:41 PDT
Comment on
attachment 206310
[details]
Patch
Attachment 206310
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/1027426
New failing tests: fast/multicol/newmulticol/clipping.html
Build Bot
Comment 3
2013-07-09 06:39:43 PDT
Created
attachment 206314
[details]
Archive of layout-test-results from webkit-ews-01 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-01 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Morten Stenshorne
Comment 4
2013-07-09 07:01:31 PDT
Created
attachment 206315
[details]
Patch
Build Bot
Comment 5
2013-07-09 12:50:04 PDT
Comment on
attachment 206315
[details]
Patch
Attachment 206315
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/994722
New failing tests: fast/multicol/newmulticol/clipping.html
Build Bot
Comment 6
2013-07-09 12:50:05 PDT
Created
attachment 206348
[details]
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Morten Stenshorne
Comment 7
2013-07-09 13:50:07 PDT
Created
attachment 206351
[details]
Patch
Build Bot
Comment 8
2013-07-10 04:20:09 PDT
Comment on
attachment 206351
[details]
Patch
Attachment 206351
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1056049
New failing tests: fullscreen/full-screen-iframe-with-max-width-height.html
Build Bot
Comment 9
2013-07-10 04:20:11 PDT
Created
attachment 206379
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Morten Stenshorne
Comment 10
2013-07-10 04:28:57 PDT
That test suddenly starting to fail is just nonsense. This patch is ready for review.
Dave Hyatt
Comment 11
2013-08-05 13:51:18 PDT
Comment on
attachment 206351
[details]
Patch r=me
WebKit Commit Bot
Comment 12
2013-08-05 14:16:31 PDT
Comment on
attachment 206351
[details]
Patch Clearing flags on attachment: 206351 Committed
r153722
: <
http://trac.webkit.org/changeset/153722
>
WebKit Commit Bot
Comment 13
2013-08-05 14:16:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug