Region based columns not clipped properly https://bugs.webkit.org/show_bug.cgi?id=118499

Patch by Morten Stenshorne <mstensho@opera.com> on 2013-08-05
Reviewed by David Hyatt.

Source/WebCore:

Need to call RenderRegion::overflowRectForFlowThreadPortion() first,
and THEN clip in the column gaps. overflowRectForFlowThreadPortion()
expands the logical left and right to the flow thread's overflow
rectangle, effectively defeating inline direction clipping completely.

Tests: fast/multicol/newmulticol/clipping-overflow-hidden.html
       fast/multicol/newmulticol/clipping-top-overflow.html
       fast/multicol/newmulticol/clipping.html

* rendering/RenderMultiColumnSet.cpp:
(WebCore::RenderMultiColumnSet::flowThreadPortionOverflowRect):

LayoutTests:

* fast/multicol/newmulticol/clipping-expected.html: Added.
* fast/multicol/newmulticol/clipping-overflow-hidden-expected.html: Added.
* fast/multicol/newmulticol/clipping-overflow-hidden.html: Added.
* fast/multicol/newmulticol/clipping-top-overflow-expected.html: Added.
* fast/multicol/newmulticol/clipping-top-overflow.html: Added.
* fast/multicol/newmulticol/clipping.html: Added.

Canonical link: https://commits.webkit.org/137441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153722 268f45cc-cd09-0410-ab3c-d52691b4dbfc